# bench

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  algorithm.cpp  algorithm.h  algorithm.hpp  algorithmstat.h  algorithmstat.hpp  algorithmstatdecorator.cpp  algorithmstatdecorator.h  aresult.cpp  aresult.hpp  aws.html  bexception.hpp  bexeption.hpp  c3.8xlarge.html  g2.2xlarge.html  genericdata.cpp  genericdata.h  genericdata.hpp  h0me.html  i7arch.html  imx6quad.html  index.html  main.cpp  main.css  main.js  main.json  params.json  task.cpp  task.h  task.hpp  task2_alg1.tsv  task2_alg5.tsv  taskcollection.cpp  taskcollection.h  taskcollection.hpp  taskdata.cpp  (+1 more)
aws/: main.json  task0_alg2.tsv  task0_alg3.tsv  task0_alg7.tsv  task1_alg0.tsv  task1_alg1.tsv  task1_alg7.tsv  task3_alg1.tsv
c3.8xlarge/: main.json  o.gnuplot  task0_alg0.data  task0_alg0.tsv  task0_alg1.data  task0_alg1.tsv  task0_alg2.data  task0_alg2.tsv  task0_alg3.data  task0_alg3.tsv  task0_alg4.data  task0_alg4.tsv  task0_alg5.data  task0_alg5.tsv  task0_alg6.data  task0_alg6.tsv  task0_alg7.data  task0_alg7.tsv  task0_alg8.data  task0_alg8.tsv  task1_alg0.data  task1_alg0.tsv  task1_alg1.data  task1_alg1.tsv  task1_alg10.data  task1_alg10.tsv  task1_alg11.data  task1_alg11.tsv  task1_alg12.data  task1_alg12.tsv  task1_alg13.data  task1_alg13.tsv  task1_alg2.data  task1_alg2.tsv  task1_alg3.data  task1_alg3.tsv  task1_alg4.data  task1_alg4.tsv  task1_alg5.data  task1_alg5.tsv  (+30 more)
common/: CMakeLists.txt  partiallysorteddata.hpp  quickrandomdata.h  quickrandomdata.hpp  randomdata.cpp  randomdata.h  randomdata.hpp  sortedrandomdata.hpp  thrust_generate_random.cu  thrust_generate_random.hpp
g2.2xlarge/: main.json  task0_alg0.tsv  task0_alg1.tsv  task0_alg4.tsv  task0_alg5.tsv  task0_alg6.tsv  task0_alg8.tsv  task0_alg9.tsv  task1_alg10.tsv  task1_alg11.tsv  task1_alg12.tsv  task1_alg13.tsv  task1_alg14.tsv  task1_alg2.tsv  task1_alg3.tsv  task1_alg4.tsv  task1_alg5.tsv  task1_alg6.tsv  task1_alg8.tsv  task1_alg9.tsv  task2_alg0.tsv  task2_alg2.tsv  task2_alg3.tsv  task2_alg4.tsv  task3_alg0.tsv  task3_alg2.tsv
h0me/: main.json  task0_alg0.tsv  task0_alg1.tsv  task0_alg2.tsv  task0_alg3.tsv  task0_alg4.tsv  task0_alg5.tsv  task0_alg6.tsv  task0_alg7.tsv  task0_alg8.tsv  task0_alg9.tsv  task1_alg0.tsv  task1_alg1.tsv  task1_alg10.tsv  task1_alg11.tsv  task1_alg12.tsv  task1_alg13.tsv  task1_alg14.tsv  task1_alg2.tsv  task1_alg3.tsv  task1_alg4.tsv  task1_alg5.tsv  task1_alg6.tsv  task1_alg7.tsv  task1_alg8.tsv  task1_alg9.tsv  task2_alg0.tsv  task2_alg1.tsv  task2_alg2.tsv  task2_alg3.tsv  task2_alg4.tsv  task2_alg5.tsv  task3_alg0.tsv  task3_alg1.tsv  task3_alg2.tsv  task3_alg3.tsv  task4_alg0.tsv  task4_alg1.tsv  task4_alg2.tsv  task5_alg0.tsv  (+2 more)
i7arch/: main.json  task0_alg0.tsv  task0_alg1.tsv  task0_alg10.tsv  task0_alg2.tsv  task0_alg3.tsv  task0_alg4.tsv  task0_alg5.tsv  task0_alg6.tsv  task0_alg7.tsv  task0_alg8.tsv  task0_alg9.tsv  task1_alg0.tsv  task1_alg1.tsv  task1_alg10.tsv  task1_alg11.tsv  task1_alg12.tsv  task1_alg13.tsv  task1_alg2.tsv  task1_alg3.tsv  task1_alg4.tsv  task1_alg5.tsv  task1_alg6.tsv  task1_alg7.tsv  task1_alg8.tsv  task1_alg9.tsv  task2_alg0.tsv  task2_alg1.tsv  task2_alg10.tsv  task2_alg11.tsv  task2_alg12.tsv  task2_alg13.tsv  task2_alg2.tsv  task2_alg3.tsv  task2_alg4.tsv  task2_alg5.tsv  task2_alg6.tsv  task2_alg7.tsv  task2_alg8.tsv  task2_alg9.tsv  (+36 more)
imx6quad/: main.json  task0_alg0.tsv  task0_alg1.tsv  task0_alg10.tsv  task0_alg2.tsv  task0_alg3.tsv  task0_alg4.tsv  task0_alg5.tsv  task0_alg6.tsv  task0_alg7.tsv  task0_alg8.tsv  task0_alg9.tsv  task1_alg0.tsv  task1_alg1.tsv  task1_alg2.tsv  task1_alg3.tsv  task1_alg4.tsv  task1_alg5.tsv  task2_alg0.tsv  task2_alg1.tsv  task2_alg10.tsv  task2_alg11.tsv  task2_alg12.tsv  task2_alg13.tsv  task2_alg2.tsv  task2_alg3.tsv  task2_alg4.tsv  task2_alg5.tsv  task2_alg6.tsv  (+16 more)
tasks/: CMakeLists.txt
tasks/block_cipher/: block_cipher_algs.hpp  block_cipher_task.cpp  block_cipher_task.hpp
tasks/block_cipher/ciphers/: 28147_14.c  28147_14.h  CMakeLists.txt  gost89.c  gost89.h  kuznechik.c  kuznechik.h  kuznechik_128bit.c  kuznechik_8bit.c  rijndael.c  rijndael.h  table.h
tasks/despace/: despace_algs.hpp  despace_task.cpp  despace_task.hpp
tasks/despace/despacer/include/: despacer.h
tasks/popcnt/: popcnt.cpp  popcnt.hpp  popcnt_algs.hpp  thrust_popcnt.cu  thrust_popcnt.hpp
tasks/simple_sorting/: psorting_task.hpp  sorting_algs.h  sorting_algs.hpp  sorting_task.cpp  sorting_task.h  sorting_task.hpp  swenson-sort.h  thrust_sort.cu  thrust_sort.hpp
tasks/simple_sorting/djbsort/avx2/: sort.c
tasks/simple_sorting/djbsort/portable1/: sort.c
tasks/simple_sorting/djbsort/portable2/: sort.c
tasks/simple_sorting/djbsort/portable3/: sort.c
tasks/simple_sorting/djbsort/portable4/: sort.c
tasks/template/: algs.hpp.t  create_task.sh  task.cpp.t  task.hpp.t
tasks/threading/: threading_algs.hpp  threading_task.cpp  threading_task.hpp  threadsafecounter.hpp
tasks/vector_length_test/: mpl.hpp  vec_algs.hpp  vec_task.cpp  vec_task.hpp  vecresult.hpp
(+40 files in other folders)
